<resources>
    <string name="app_name">World Explorer</string>
    <string name="search_view_hint_message">Search by name, capital&#8230;</string>

    <string name="error_loading_message">Error occurred when retrieving data</string>
    <string name="countries_not_found_message">No countries found</string>
    <string name="none_message">None</string>
    <string name="search_fragment_label">Search:&#160;</string>

    <string name="world_list_fragment">World</string>

    <!-- Image content descriptions -->
    <string name="background_image">Background image</string>
    <string name="continent_image">Continent image</string>
    <string name="flag_image">Flag image</string>

    <!-- UI additions -->
    <string name="population">Population:&#160;</string>
    <string name="area">Area:&#160;</string>
    <string name="metres_squared">&#160;m\u00B2</string>
    <string name="languages">Languages:&#160;</string>
    <string name="currencies">Currencies:&#160;</string>
    <string name="regional_blocks">Regional blocks:&#160;</string>
    <string name="bordering_countries">Bordering countries:&#160;</string>
    <string name="location">Country\'s location</string>

</resources>
