<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="country"
            type="com.example.worldexplorer.model.data.Country" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_loading_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.worldexplorer.ui.details.LockableNestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/details_information_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_view_vertical_margin"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/big_flag_height"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/flag_image"
                    android:imageUrl="@{country.flagUrlPath}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{country.name}"
                        android:textAppearance="@style/CountryNameStyle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{country.capital}"
                        android:textAppearance="@style/CapitalNameStyle" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/population"
                            android:textAppearance="@style/CountryDetailsSectionText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:bigNumberString="@{String.valueOf(country.population)}"
                            android:textAppearance="@style/CountryDetailsInfoText" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/area"
                            android:textAppearance="@style/CountryDetailsSectionText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:bigNumberString="@{String.valueOf(country.area)}"
                            android:textAppearance="@style/CountryDetailsInfoText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/metres_squared"
                            android:textAppearance="@style/CountryDetailsInfoText" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/languages"
                            android:textAppearance="@style/CountryDetailsSectionText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:anyListToString="@{country.languages}"
                            android:textAppearance="@style/CountryDetailsInfoText" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/currencies"
                            android:textAppearance="@style/CountryDetailsSectionText" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:anyListToString="@{country.currencies}"
                            android:textAppearance="@style/CountryDetailsInfoText" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/regional_blocks"
                        android:textAppearance="@style/CountryDetailsSectionText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:anyListToString="@{country.regionalBlocs}"
                        android:text="@string/none_message"
                        android:textAppearance="@style/CountryDetailsInfoText" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bordering_countries_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bordering_countries"
                        android:textAppearance="@style/CountryDetailsSectionText" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-5dp"
                        android:orientation="horizontal" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_card_gaps"
                    app:cardBackgroundColor="@color/cardBackground"
                    app:cardCornerRadius="@dimen/default_card_corner_radius"
                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:orientation="vertical"
                        android:padding="@dimen/default_card_info_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:paddingBottom="@dimen/default_card_info_padding"
                            android:text="@string/location"
                            android:textAppearance="@style/CountryDetailsSectionText" />

                        <!-- Map fragment -->
                        <fragment
                            android:id="@+id/map"
                            android:name="com.example.worldexplorer.ui.details.TouchableSupportMapFragment"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/map_height"
                            tools:context=".ui.MainActivity" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </com.example.worldexplorer.ui.details.LockableNestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>